@@ -13,19 +13,23 @@ AUX nvidia 1510 RMD160 ca0d0e5375109d9edf682d9bdda743b7c693e4d4 SHA1 85cf9bff167
 AUX nvidia-169.07 639 RMD160 8baddb6fd1bf7f0e2688870a78e8ace051d62e3f SHA1 b30487ba2a24a6b1359d1fd831eeb1705060953c SHA256 a8c4860f008d53776fda7a17b59524f271236559af688e9a2c9845cbbcba1577
 AUX nvidia-2.6.28.patch 5665 RMD160 a3575e7c8907955bfee6608bfd3ea7e30d8d5c3b SHA1 727a575105fb59eb67495ab35680e3095f6dec5a SHA256 ddb20b21074dd8bbf0bb32ac830b662bde77ba8dfd54ef515672876bb30f21e0
 DIST NVIDIA-FreeBSD-x86-180.53.tar.gz 18596127 RMD160 2a828956f113fe1bb572764b65ff45a91fd2f07f SHA1 f69220338906905cd2a7a6570ce1bec6723cbe49 SHA256 3edb3a22155fb0bfa5b4036913daab145b81fafbbb7f62023f2b7135c4d81a1c
+DIST NVIDIA-FreeBSD-x86-180.60.tar.gz 18594717 RMD160 f295b96305327c1d125709f35b7a863ad0dfa18e SHA1 a9051cd69a22748c88796a5903d893fcee24718d SHA256 7ddf39476b42ccf1f0585340ad6b384d5c7cdc5825cba33f81138156077bf89a
 DIST NVIDIA-FreeBSD-x86-185.18.04.tar.gz 19185492 RMD160 5e3e2504c82a060e33534fa18263ff2230f5b6d1 SHA1 4c41b95a8d84cd96a58f5fc51fac433f09a8c2eb SHA256 b84e769c7ff06478d1989c88475792284388c8e0ed78de31af7f0b0f32a3dc4c
 DIST NVIDIA-FreeBSD-x86-185.18.08.tar.gz 19190441 RMD160 e9ad6dcc5874517c3c929cd40e05d6e21cd03b5e SHA1 3c79a5e252380105e3c044059fd983dfdbb27560 SHA256 9f9ee6b0e680a3d6f863d0cc5952194b89656d05941944d2df3c0796d049f6da
 DIST NVIDIA-FreeBSD-x86-185.19.tar.gz 19866641 RMD160 03c84d542f592efb20d2f27e4d3a71e4e1f92f69 SHA1 95a7cc48dce788b3e07323bbe85d651897ecbb4f SHA256 a4ab9f6598789e81574a61a05ff4f12e27c832dcec3f815d87eb07a937b085ab
 DIST NVIDIA-Linux-x86-180.53-pkg0.run 13573257 RMD160 6fc1e0f44c269e68cd19959cd73f1560cb9f57bd SHA1 5b0852ac352ea9edbc067804188b83ca4961b17f SHA256 385b17ba2d0e3ebab37bda76fda4c5b8b92ec7b9a9024ffbda5bd03d83965d0d
+DIST NVIDIA-Linux-x86-180.60-pkg0.run 13574190 RMD160 fd43b3a3bdd05b292b6f8f363c45b3ae677f5ad0 SHA1 d9a68f1536edb4f276634acd8ec2377ea252de69 SHA256 42706637c02dfe2aad5df69f5cc2b3ce0ad13021c6a9b49e42c6e5052eaa7d89
 DIST NVIDIA-Linux-x86-185.18.04-pkg0.run 14092597 RMD160 54c92315a57174a251357af42b856ec08878cc29 SHA1 a3934f0f269b97073a9182f2812e799a05509052 SHA256 fc49fbb40c8ab53cf58c1eb52e44ae0ae55316cdd7e4421f1a81e1ce3feb1d62
 DIST NVIDIA-Linux-x86-185.18.08-pkg0.run 14096920 RMD160 0ce540de2aaedd7f7d6c772d46cea636a61846ff SHA1 744819a07882a2f31b22c353711fa12d267a89de SHA256 c737752674337854c77970ee4dada61e96501c2ca15c252b47d8bbbdc8aa9daa
 DIST NVIDIA-Linux-x86-185.19-pkg0.run 14771781 RMD160 1ad80cff76f52c71f5b16751f61717a59a93756c SHA1 837bdfdf9d0cedeb23256439713a0cbfd9189087 SHA256 f79615ea4afd6ee4471389e5e76d58fc1df72f56d6d2009f3c245cfba053c61c
 DIST NVIDIA-Linux-x86_64-180.53-pkg2.run 21477159 RMD160 5c605898e1a9362c1d6b9bcaff134eb39a7a37e7 SHA1 c830879c53c07fcfa1c8e4b20ef822b57be69904 SHA256 b40289f81e9469fa1cf2d60104e2980b947b5c23d33e4796d0f05d417fa6d419
+DIST NVIDIA-Linux-x86_64-180.60-pkg2.run 21479961 RMD160 150d7841814b58b7e1f570264ef7a3b06df7ad84 SHA1 606b6a9b1cd9fae7d3e3cd11de64b8c6f97b4518 SHA256 69eee4532031cb4107ea5d67743e8a210f83e2e3aa688d50c7f2f0bc8cc95933
 DIST NVIDIA-Linux-x86_64-185.18.04-pkg2.run 22168047 RMD160 0f428d3290d8673ea1f745564004bb03adb75581 SHA1 0e695d7ce87232111e9da95c992691b1276f95ad SHA256 ef9f38b60402144fcfb63b147c3b8b77ef5d1cbbb4ed8f0708b9fa2c480cd06b
 DIST NVIDIA-Linux-x86_64-185.18.08-pkg2.run 22179613 RMD160 16c8d7a55e5a2b672d2514e52957da1ffde1be36 SHA1 b3b5e6b0e9f1425799abc7ecb6769cca2e42697b SHA256 85e87ba4554cbf1f63c90a4cea0851b43d618a3b9a4372e40078acf049b9bb56
 DIST NVIDIA-Linux-x86_64-185.19-pkg2.run 23458043 RMD160 e5951bf0001b0897806e820f63c54769297bf67b SHA1 523813449acb6fa91c46b62b15a5d3a2fb9bcd56 SHA256 43cca8302cb23cda259ad0befd559d986803be27dad2b4df43777d1f0eb4fac3
 EBUILD nvidia-drivers-180.53.ebuild 15430 RMD160 b78877db67606cda73a79417fea99e946febe371 SHA1 82f21f6abc9da89b27a1cef1039eee3ff8af98b1 SHA256 f72ce734d2b4d8b5325612bba9ba92ccb332b0ac88acc0de1817c8882918fcec
+EBUILD nvidia-drivers-180.60.ebuild 15430 RMD160 b78877db67606cda73a79417fea99e946febe371 SHA1 82f21f6abc9da89b27a1cef1039eee3ff8af98b1 SHA256 f72ce734d2b4d8b5325612bba9ba92ccb332b0ac88acc0de1817c8882918fcec
 EBUILD nvidia-drivers-185.18.04.ebuild 15430 RMD160 b78877db67606cda73a79417fea99e946febe371 SHA1 82f21f6abc9da89b27a1cef1039eee3ff8af98b1 SHA256 f72ce734d2b4d8b5325612bba9ba92ccb332b0ac88acc0de1817c8882918fcec
 EBUILD nvidia-drivers-185.18.08.ebuild 15430 RMD160 b78877db67606cda73a79417fea99e946febe371 SHA1 82f21f6abc9da89b27a1cef1039eee3ff8af98b1 SHA256 f72ce734d2b4d8b5325612bba9ba92ccb332b0ac88acc0de1817c8882918fcec
 EBUILD nvidia-drivers-185.19.ebuild 15430 RMD160 b78877db67606cda73a79417fea99e946febe371 SHA1 82f21f6abc9da89b27a1cef1039eee3ff8af98b1 SHA256 f72ce734d2b4d8b5325612bba9ba92ccb332b0ac88acc0de1817c8882918fcec
-MISC ChangeLog 1790 RMD160 0fcee814f094be88a9d17c114bd0ef759e2e4adf SHA1 51fd0afa2e261c5c5cbc5578f1202e630f3d5cbc SHA256 e02544e5137ab6604cfa006ea907fd51ae4b784a5ddc92e719b1c18ac3af6127
+MISC ChangeLog 1951 RMD160 06ab99075ffd745a622882efa42d902f432c43ce SHA1 07a155cbfa05e9863564f131f033aeecc41c8733 SHA256 ff36c4721c5e087db78b1560a733e77607356ea5aea0fabe649ccdc941dae87f
