@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*nvidia-drivers-180.60 (14 May 2009)
+
+  14 May 2009; Alex Alexander (wired) <alex.alexander@gmail.com>
+  +nvidia-drivers-180.60.ebuild:
+  new prerelease driver
+
 *nvidia-drivers-185.18.08 (08 May 2009)
 
   08 May 2009; Alex Alexander (wired) <alex.alexander@gmail.com>
